fixed collapse issue

--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,7 @@ main {
 
   .container {
     width: 327px;
-    height: auto;
+    height: 562px;
     margin: 40% auto;
 
     border-radius: 23px;
@@ -118,6 +118,7 @@ main {
             width: 279px;
             height: auto;
             border-bottom: 1px solid #E8E8EA;
+            cursor: pointer;
 
             .question {
               width: 279px;
@@ -150,7 +151,8 @@ main {
               font-style: normal;
               font-weight: 400;
               line-height: 18px;
-              margin: 15px 0;
+              margin: -4px 0 9px 0;
+              transition: display 1s ease-out;
             }
           }
         }
